2003-05-30  H.J. Lu <hongjiu.lu@intel.com>

	* config/default.exp: Load tmpdir/libpath.exp.
	(gcc_ld_flag): Set from $libpath.

2003-05-27  Jason Thorpe  <thorpej@wasabisystems.com>

	* ld-elf/elf.exp: Use if_elf_format.
	* ld-elf/sec64k.exp: Likewise.
	* ld-elfcomm/elfcomm.exp: Likewise.
	* lib/ld-lib.exp (is_elf_format): Match hppa*64*-*-hpux*.

2003-05-25  Jason Thorpe  <thorpej@wasabisystems.com>

	* ld-mips-elf/mips-elf.exp: Make all NetBSD targets match as elf.

2003-05-20  Jakub Jelinek  <jakub@redhat.com>

	* ld-elfvsb/common.c: New file.
	* ld-elfvsb/elfvsb.exp: Add common.

2003-05-20  H.J. Lu <hongjiu.lu@intel.com>

	* ld-elfvsb/sh3.c: New file.
	* ld-elfvsb/test.c: Likewise.

	* ld-elfvsb/elfvsb.exp: Add new weak hidden symbol tests.

2003-05-15  H.J. Lu <hongjiu.lu@intel.com>

	* config/default.exp (gcc_ld_flag): New. Make the newly built
	linker available to gcc.
	* lib/ld-lib.exp (default_ld_simple_link): Pass $gcc_ld_flag
	to gcc.

	* ld-elfvers/vers.exp: Use "ld_simple_link $CC" to build shared
	libraries.
	* ld-elfvsb/elfvsb.exp: Likewise.
	* ld-elfweak/elfweak.exp: Likewise.
	* ld-shared/shared.exp: Likewise.

	* ld-elfvers/vers.exp: Use "-Wl,-rpath,." to build shared
	libraries.
	* ld-elfvsb/elfvsb.exp: Likewise.

	* ld-elfvsb/elfvsb.exp: Remove xfail for powerpc-*-linux*.

	* ld-elfweak/elfweak.exp: Use PIC for shared libraries.

2003-05-13  Stephane Carrez  <stcarrez@nerim.fr>

	* ld-m68hc11/link-hcs12.d: New test.
	* ld-m68hc11/link-hcs12.s: New file.
	* ld-m68hc11/link-hc12.s: New file.

2003-05-13  H.J. Lu <hongjiu.lu@intel.com>

	* ld-elfweak/elfweak.exp: Fix typo.

2003-05-13  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-elfvers/vers.exp: Run on sh[34]*-*-linux*.
	* ld-elfvsb/elfvsb.exp: Likewise.
	* ld-elfweak/elfweak.exp: Likewise.

2003-05-12  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/b-fixo2.d, ld-mmix/bpo-18.d, ld-mmix/bpo-18m.d,
	ld-mmix/loc4.d, ld-mmix/loc4m.d, ld-mmix/loc6.d, ld-mmix/loc6m.d,